<resources>
    <string name="app_name">Familiar</string>
    <string name="double_back_press_message">Press BACK again to exit.</string>
    <string name="title">Title</string>
    <string name="link">Link</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="pin">Pin</string>
    <string name="details">Details</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="search">Search</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="pin_code_enter">Enter PIN-code</string>
    <string name="pin_code_enter_current">Enter current PIN-code</string>
    <string name="pin_code_change">Change PIN-code</string>
    <string name="pin_code_create">Create PIN-code</string>
    <string name="pin_code_confirm">Confirm PIN-code</string>
    <string name="pin_code_incorrect">PIN-codes are different</string>
    <string name="nuke">Nuke!</string>
    <string name="auth_error">Authentication error: %s</string>
    <string name="auth_fail">Authentication failed</string>
    <string name="bio_login_title">Biometric login</string>
    <string name="bio_login_message">Log in your biometric credential</string>
    <string name="user">User</string>
    <string name="add_user">Add User</string>
    <string name="name">Name</string>
</resources>