<?xml version="1.0" encoding="utf-8"?>
<com.mirash.familiar.view.gesturedetect.HideKeyboardScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="@dimen/side_padding"
        >
        <!--title-->
        <com.mirash.familiar.view.StyledTextInputLayout
            android:id="@+id/item_title_input"
            style="@style/TextInputLayout"
            android:hint="@string/title"
            >
            <com.google.android.material.textfield.TextInputEditText
                style="@style/NameInputText"
                android:imeOptions="actionNext"
                android:inputType="textPersonName|textNoSuggestions"
                />
        </com.mirash.familiar.view.StyledTextInputLayout>
        <ImageView
            style="@style/DelimiterImage"
            android:src="@drawable/ic_cat_login"
            />
        <!--login-->
        <com.mirash.familiar.view.StyledTextInputLayout
            android:id="@+id/item_login_input"
            style="@style/TextInputLayout"
            android:layout_marginTop="@dimen/half_padding"
            android:hint="@string/login"
            >
            <com.google.android.material.textfield.TextInputEditText
                style="@style/NameInputText"
                android:imeOptions="actionNext"
                android:inputType="textPersonName|textNoSuggestions"
                />
        </com.mirash.familiar.view.StyledTextInputLayout>
        <!--email-->
        <com.mirash.familiar.view.StyledTextInputLayout
            android:id="@+id/item_email_input"
            style="@style/TextInputLayout"
            android:layout_marginTop="@dimen/side_padding"
            android:hint="@string/email"
            >
            <com.google.android.material.textfield.TextInputEditText
                style="@style/NameInputText"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                />
        </com.mirash.familiar.view.StyledTextInputLayout>
        <!--phone-->
        <com.mirash.familiar.view.StyledTextInputLayout
            android:id="@+id/item_phone_input"
            style="@style/TextInputLayout"
            android:layout_marginTop="@dimen/side_padding"
            android:hint="@string/phone"
            >
            <com.google.android.material.textfield.TextInputEditText
                style="@style/NameInputText"
                android:imeOptions="actionNext"
                android:inputType="phone"
                />
        </com.mirash.familiar.view.StyledTextInputLayout>
        <ImageView
            style="@style/DelimiterImage"
            android:src="@drawable/ic_fish_skeleton"
            />
        <!--password-->
        <com.mirash.familiar.view.StyledTextInputLayout
            android:id="@+id/item_password_input"
            style="@style/TextInputLayout"
            android:layout_marginTop="@dimen/half_padding"
            android:hint="@string/password"
            app:passwordToggleEnabled="true"
            >
            <com.google.android.material.textfield.TextInputEditText
                style="@style/NameInputText"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                />
        </com.mirash.familiar.view.StyledTextInputLayout>
        <!--pin-->
        <com.mirash.familiar.view.StyledTextInputLayout
            android:id="@+id/item_pin_input"
            style="@style/TextInputLayout"
            android:layout_marginTop="@dimen/side_padding"
            android:hint="@string/pin"
            app:passwordToggleEnabled="true"
            >
            <com.google.android.material.textfield.TextInputEditText
                style="@style/NameInputText"
                android:imeOptions="actionNext"
                android:inputType="numberPassword"
                />
        </com.mirash.familiar.view.StyledTextInputLayout>
        <ImageView
            style="@style/DelimiterImage"
            android:src="@drawable/ic_clew"
            />
        <!--link-->
        <com.mirash.familiar.view.StyledTextInputLayout
            android:id="@+id/item_link_input"
            style="@style/TextInputLayout"
            android:layout_marginTop="@dimen/half_padding"
            android:hint="@string/link"
            >
            <com.google.android.material.textfield.TextInputEditText
                style="@style/NameInputText"
                android:imeOptions="actionNext"
                android:inputType="textUri"
                />
        </com.mirash.familiar.view.StyledTextInputLayout>
        <!--details-->
        <com.mirash.familiar.view.StyledTextInputLayout
            android:id="@+id/item_details_input"
            style="@style/TextInputLayout"
            android:layout_marginTop="@dimen/side_padding"
            android:hint="@string/details"
            >
            <com.google.android.material.textfield.TextInputEditText
                style="@style/NameInputText"
                android:inputType="textMultiLine"
                />
        </com.mirash.familiar.view.StyledTextInputLayout>
    </LinearLayout>
</com.mirash.familiar.view.gesturedetect.HideKeyboardScrollView>
