<?xml version="1.0" encoding="utf-8"?>
<com.mirash.familiar.view.gesturedetect.HideKeyboardScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="@dimen/side_padding"
        >
        <!--icon-->
        <Spinner
            android:id="@+id/user_item_icon_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <!--login-->
        <com.mirash.familiar.view.StyledTextInputLayout
            android:id="@+id/user_item_login_input"
            style="@style/TextInputLayout"
            android:layout_marginTop="@dimen/side_padding"
            android:hint="@string/login"
            >
            <com.google.android.material.textfield.TextInputEditText
                style="@style/NameInputText"
                android:imeOptions="actionNext"
                android:inputType="textPersonName|textNoSuggestions"
                />
        </com.mirash.familiar.view.StyledTextInputLayout>
        <!--email-->
        <com.mirash.familiar.view.StyledTextInputLayout
            android:id="@+id/user_item_email_input"
            style="@style/TextInputLayout"
            android:layout_marginTop="@dimen/side_padding"
            android:hint="@string/email"
            >
            <com.google.android.material.textfield.TextInputEditText
                style="@style/NameInputText"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                />
        </com.mirash.familiar.view.StyledTextInputLayout>
        <!--phone-->
        <com.mirash.familiar.view.StyledTextInputLayout
            android:id="@+id/user_item_phone_input"
            style="@style/TextInputLayout"
            android:layout_marginTop="@dimen/side_padding"
            android:hint="@string/phone"
            >
            <com.google.android.material.textfield.TextInputEditText
                style="@style/NameInputText"
                android:imeOptions="actionNext"
                android:inputType="phone"
                />
        </com.mirash.familiar.view.StyledTextInputLayout>
    </LinearLayout>
</com.mirash.familiar.view.gesturedetect.HideKeyboardScrollView>
