<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    >
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        >
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/user_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.AppBarOverlay"
            />
    </com.google.android.material.appbar.AppBarLayout>
    <com.mirash.familiar.view.gesturedetect.HideKeyboardScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="@dimen/side_padding"
            >
            <!--name-->
            <com.mirash.familiar.view.StyledTextInputLayout
                android:id="@+id/user_name_input"
                style="@style/TextInputLayout"
                android:hint="@string/name"
                >
                <com.google.android.material.textfield.TextInputEditText
                    style="@style/NameInputText"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName|textNoSuggestions"
                    />
            </com.mirash.familiar.view.StyledTextInputLayout>
            <!--email-->
            <com.mirash.familiar.view.StyledTextInputLayout
                android:id="@+id/user_email_input"
                style="@style/TextInputLayout"
                android:layout_marginTop="@dimen/side_padding"
                android:hint="@string/email"
                >
                <com.google.android.material.textfield.TextInputEditText
                    style="@style/NameInputText"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    />
            </com.mirash.familiar.view.StyledTextInputLayout>
            <!--phone-->
            <com.mirash.familiar.view.StyledTextInputLayout
                android:id="@+id/user_phone_input"
                style="@style/TextInputLayout"
                android:layout_marginTop="@dimen/side_padding"
                android:hint="@string/phone"
                >
                <com.google.android.material.textfield.TextInputEditText
                    style="@style/NameInputText"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    />
            </com.mirash.familiar.view.StyledTextInputLayout>
        </LinearLayout>
    </com.mirash.familiar.view.gesturedetect.HideKeyboardScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>

